fixed scrollbar track bg transition when changing theme

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,7 +29,7 @@
 }
 
 ::-webkit-scrollbar-track {
-  @apply rounded-r dark:bg-lightNeutralBg bg-lightVioletBg;
+  @apply rounded-r bg-inherit;
 }
 
 ::-webkit-scrollbar-thumb {
